--- a/substrate/primitives/io/Cargo.toml
+++ b/substrate/primitives/io/Cargo.toml
@@ -34,6 +34,9 @@ strum = { features = [ "derive" ], workspace = true }
 tracing = { workspace = true }
 tracing-core = { workspace = true }
 
+[target.'cfg(substrate_runtime)'.dependencies]
+picoalloc = { version = "5.1.0", features = [ "paranoid" ] }
+
 [target.'cfg(not(substrate_runtime))'.dependencies]
 sp-keystore = { workspace = true, default-features = false }
 sp-trie = { workspace = true, default-features = false }
