chore: add support for fetching both packages

--- a/.github/workflows/release-reusable-promote-to-final.yml
+++ b/.github/workflows/release-reusable-promote-to-final.yml
@@ -63,6 +63,8 @@ jobs:
               fetch_release_artifacts_from_s3 "$package" "$TARGET"
             done
             NODE_VERSION="$(get_polkadot_node_version_from_code)"
+
+            # TODO: add package_type input here as well and use it below
             fetch_debian_package_from_s3 polkadot
           else
             fetch_release_artifacts_from_s3 "$PACKAGE" "$TARGET"
