--- a/substrate/frame/revive/Cargo.toml
+++ b/substrate/frame/revive/Cargo.toml
@@ -64,6 +64,7 @@ subxt-signer = { workspace = true, optional = true, features = ["unstable-eth"] 
 array-bytes = { workspace = true, default-features = true }
 assert_matches = { workspace = true }
 pretty_assertions = { workspace = true }
+proptest = "1.5"
 secp256k1 = { workspace = true, features = ["recovery"] }
 serde_json = { workspace = true }
 
