--- a/.github/workflows/release-30_publish_release_draft.yml
+++ b/.github/workflows/release-30_publish_release_draft.yml
@@ -81,7 +81,7 @@ jobs:
         with:
             app-id: ${{ vars.POLKADOT_SDK_RELEASE_RW_APP_ID }}
             private-key: ${{ secrets.POLKADOT_SDK_RELEASE_RW_APP_KEY }}
-            owner: paritytech
+            owner: BDevParity
             repositories: polkadot-sdk
       - name: Download artifacts
         env:
@@ -173,7 +173,7 @@ jobs:
         with:
             app-id: ${{ vars.POLKADOT_SDK_RELEASE_RW_APP_ID }}
             private-key: ${{ secrets.POLKADOT_SDK_RELEASE_RW_APP_KEY }}
-            owner: paritytech
+            owner: BDevParity
             repositories: polkadot-sdk
 
       - name: Download runtimes
@@ -242,7 +242,7 @@ jobs:
         with:
             app-id: ${{ vars.POLKADOT_SDK_RELEASE_RW_APP_ID }}
             private-key: ${{ secrets.POLKADOT_SDK_RELEASE_RW_APP_KEY }}
-            owner: paritytech
+            owner: BDevParity
             repositories: polkadot-sdk
 
       - name: Upload ${{ matrix.binary }} binary to release draft
