--- a/polkadot/xcm/docs/Cargo.toml
+++ b/polkadot/xcm/docs/Cargo.toml
@@ -17,14 +17,19 @@ xcm-executor = { workspace = true, default-features = true }
 xcm-simulator = { workspace = true, default-features = true }
 
 # For building FRAME runtimes
+assets-common = {workspace = true, default-features = true }
 codec = { workspace = true, default-features = true }
 frame = { features = ["runtime"], workspace = true, default-features = true }
+polkadot-parachain-primitives = { workspace = true, default-features = true }
 polkadot-runtime-parachains = { workspace = true, default-features = true }
 scale-info = { workspace = true }
 sp-io = { workspace = true, default-features = true }
 sp-runtime = { workspace = true, default-features = true }
 
 # Some pallets
+parachain-info = { workspace = true, default-features = true }
+pallet-asset-conversion = { workspace = true, default-features = true }
+pallet-assets = { workspace = true, default-features = true }
 pallet-balances = { workspace = true, default-features = true }
 pallet-message-queue = { workspace = true, default-features = true }
 
