--- a/polkadot/xcm/docs/Cargo.toml
+++ b/polkadot/xcm/docs/Cargo.toml
@@ -13,12 +13,14 @@ publish = false
 pallet-xcm = { workspace = true, default-features = true }
 xcm = { workspace = true, default-features = true }
 xcm-builder = { workspace = true, default-features = true }
+xcm-emulator = { workspace = true, default-features = true }
 xcm-executor = { workspace = true, default-features = true }
 xcm-simulator = { workspace = true, default-features = true }
 
 # For building FRAME runtimes
 assets-common = {workspace = true, default-features = true }
 codec = { workspace = true, default-features = true }
+cumulus-primitives-core = { workspace = true, default-features = true }
 cumulus-primitives-utility = { workspace = true, default-features = true }
 frame = { features = ["runtime"], workspace = true, default-features = true }
 parachains-common = { workspace = true, default-features = true }
@@ -29,6 +31,9 @@ sp-io = { workspace = true, default-features = true }
 sp-runtime = { workspace = true, default-features = true }
 
 # Some pallets
+cumulus-pallet-parachain-system = {workspace = true, default-features = true}
+cumulus-pallet-xcm = {workspace = true, default-features = true}
+cumulus-pallet-xcmp-queue = {workspace = true, default-features = true}
 parachain-info = { workspace = true, default-features = true }
 pallet-asset-conversion = { workspace = true, default-features = true }
 pallet-assets = { workspace = true, default-features = true }
