--- a/.github/workflows/release-reusable-rc-build.yml
+++ b/.github/workflows/release-reusable-rc-build.yml
@@ -183,11 +183,13 @@ jobs:
       - name: Install llvm
         run: |
           brew install llvm
-          export LIBCLANG_PATH="$(brew --prefix llvm)/lib"
-      
+
       - name: Set dynamic library path
         run: |
           LLVM_PATH=$(brew --prefix llvm)
+          export LIBCLANG_PATH="$LLVM_PATH/lib"
+          export LDFLAGS="-L$LLVM_PATH/lib"
+          export CPPFLAGS="-I$LLVM_PATH/include"
           echo "DYLD_LIBRARY_PATH=$LLVM_PATH/lib" >> $GITHUB_ENV
 
       - name: Install gpg
