--- a/polkadot/node/subsystem-types/Cargo.toml
+++ b/polkadot/node/subsystem-types/Cargo.toml
@@ -12,6 +12,7 @@ repository.workspace = true
 workspace = true
 
 [dependencies]
+bitvec = { features = ["alloc"], workspace = true }
 async-trait = { workspace = true }
 derive_more = { workspace = true, default-features = true }
 fatality = { workspace = true }
