--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1475,9 +1475,11 @@ xcm-runtime-apis = { path = "polkadot/xcm/xcm-runtime-apis", default-features = 
 xcm-simulator = { path = "polkadot/xcm/xcm-simulator", default-features = false }
 yet-another-parachain-runtime = { path = "cumulus/parachains/runtimes/testing/yet-another-parachain" }
 zeroize = { version = "1.7.0", default-features = false }
-zombienet-configuration = { version = "0.3.12" }
-zombienet-orchestrator = { version = "0.3.12" }
-zombienet-sdk = { version = "0.3.12" }
+# use git temporarily until released zombienet-sdk does not include changes for https://github.com/paritytech/zombienet-sdk/issues/371
+zombienet-configuration = { git = "https://github.com/paritytech/zombienet-sdk.git", rev = "a2b3e9025a97b4c89ccc11397b4167dfd756e814" }
+zombienet-orchestrator = { git = "https://github.com/paritytech/zombienet-sdk.git", rev = "a2b3e9025a97b4c89ccc11397b4167dfd756e814" }
+zombienet-sdk = { git = "https://github.com/paritytech/zombienet-sdk.git", rev = "a2b3e9025a97b4c89ccc11397b4167dfd756e814" }
+
 zstd = { version = "0.12.4", default-features = false }
 
 [profile.release]
