--- a/.github/workflows/release-reusable-rc-build.yml
+++ b/.github/workflows/release-reusable-rc-build.yml
@@ -183,6 +183,16 @@ jobs:
       - name: Install solc
         run: brew install solidity
 
+      - name: Install resolc
+        run: |
+          VERSION="0.3.0"
+          ASSET_URL="https://github.com/paritytech/revive/releases/download/v$VERSION/resolc-universal-apple-darwin"
+          echo "Downloading resolc v$VERSION from $ASSET_URL"
+          curl -Lsf --show-error -o $HOME/.cargo/bin/resolc "$ASSET_URL"
+          chmod +x $HOME/.cargo/bin/resolc
+          xattr -c $HOME/.cargo/bin/resolc
+          resolc --version
+
       - name: Install llvm
         run: |
           brew install llvm@21
