--- a/substrate/frame/multi-asset-bounties/Cargo.toml
+++ b/substrate/frame/multi-asset-bounties/Cargo.toml
@@ -19,7 +19,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 codec = { features = ["derive"], workspace = true }
 docify = { workspace = true }
 frame-benchmarking = { optional = true, workspace = true }
-frame-support = { workspace = true }
+frame-support = { features = ["experimental"], workspace = true }
 frame-system = { workspace = true }
 log = { workspace = true }
 scale-info = { features = ["derive"], workspace = true }
