--- a/substrate/frame/revive/uapi/Cargo.toml
+++ b/substrate/frame/revive/uapi/Cargo.toml
@@ -31,4 +31,4 @@ polkavm-derive = { version = "0.27.0" }
 default = ["scale"]
 scale = ["dep:codec", "scale-info"]
 unstable-hostfn = []
-precompiles = ["alloy-core"]
+precompile-sol-interfaces = ["alloy-core"]
