--- a/polkadot/node/network/availability-distribution/Cargo.toml
+++ b/polkadot/node/network/availability-distribution/Cargo.toml
@@ -30,10 +30,12 @@ polkadot-node-subsystem-util = { workspace = true, default-features = true }
 polkadot-primitives = { workspace = true, default-features = true }
 rand = { workspace = true, default-features = true }
 sc-network = { workspace = true, default-features = true }
+sc-network-types = { workspace = true, default-features = true }
 schnellru = { workspace = true }
 sp-core = { features = ["std"], workspace = true, default-features = true }
 sp-keystore = { workspace = true, default-features = true }
 thiserror = { workspace = true }
+async-trait = "0.1.88"
 
 [dev-dependencies]
 assert_matches = { workspace = true }
