--- a/Plan.toml
+++ b/Plan.toml
@@ -938,9 +938,9 @@ to = "2.0.0"
 [[crate]]
 # bridges/snowbridge/primitives/beacon
 name = "snowbridge-beacon-primitives"
-from = "0.15.0"
-to = "0.16.0"
-bump = "major"
+from = "0.16.0"
+to = "0.16.1"
+bump = "patch"
 reason = "changed"
 
 [[crate]]
@@ -3066,9 +3066,9 @@ reason = "changed"
 [[crate]]
 # bridges/snowbridge/pallets/ethereum-client
 name = "snowbridge-pallet-ethereum-client"
-from = "0.15.0"
-to = "0.16.0"
-bump = "major"
+from = "0.16.0"
+to = "0.16.1"
+bump = "patch"
 reason = "changed"
 
 [[crate]]
@@ -3384,9 +3384,9 @@ reason = "changed"
 [[crate]]
 # bridges/snowbridge/pallets/inbound-queue
 name = "snowbridge-pallet-inbound-queue"
-from = "0.15.0"
-to = "0.16.0"
-bump = "major"
+from = "0.16.0"
+to = "0.16.1"
+bump = "patch"
 reason = "changed"
 
 [[crate]]
@@ -3512,9 +3512,9 @@ reason = "changed"
 [[crate]]
 # cumulus/parachains/runtimes/bridge-hubs/bridge-hub-rococo
 name = "bridge-hub-rococo-runtime"
-from = "0.22.0"
-to = "0.23.0"
-bump = "major"
+from = "0.23.0"
+to = "0.23.1"
+bump = "patch"
 reason = "changed"
 
 [[crate]]
@@ -3528,9 +3528,9 @@ reason = "changed"
 [[crate]]
 # cumulus/parachains/runtimes/bridge-hubs/bridge-hub-westend
 name = "bridge-hub-westend-runtime"
-from = "0.19.0"
-to = "0.20.0"
-bump = "major"
+from = "0.20.0"
+to = "0.20.1"
+bump = "patch"
 reason = "changed"
 
 [[crate]]
