--- a/cumulus/parachains/runtimes/bridge-hubs/bridge-hub-rococo/Cargo.toml
+++ b/cumulus/parachains/runtimes/bridge-hubs/bridge-hub-rococo/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bridge-hub-rococo-runtime"
-version = "0.23.0"
+version = "0.23.1"
 authors.workspace = true
 edition.workspace = true
 description = "Rococo's BridgeHub parachain runtime"
@@ -109,11 +109,11 @@ xcm-executor.workspace = true
 xcm-runtime-apis.workspace = true
 
 [dev-dependencies]
-bridge-hub-test-utils = { default-features = true, workspace = true }
-bridge-runtime-common = { features = ["integrity-test"], default-features = true, workspace = true }
-pallet-bridge-relayers = { features = ["integrity-test"], workspace = true, default-features = false }
-parachains-runtimes-test-utils = { default-features = true, workspace = true }
-snowbridge-runtime-test-common = { default-features = true, workspace = true }
+bridge-hub-test-utils = { default-features = true, path = "../test-utils" }
+bridge-runtime-common = { features = ["integrity-test"], default-features = true, path = "../../../../../bridges/bin/runtime-common" }
+pallet-bridge-relayers = { features = ["integrity-test"], default-features = false, path = "../../../../../bridges/modules/relayers" }
+parachains-runtimes-test-utils = { default-features = true, path = "../../test-utils" }
+snowbridge-runtime-test-common = { default-features = true, path = "../../../../../bridges/snowbridge/runtime/test-common" }
 
 [features]
 default = ["std"]
@@ -248,7 +248,6 @@ runtime-benchmarks = [
 	"snowbridge-pallet-inbound-queue/runtime-benchmarks",
 	"snowbridge-pallet-outbound-queue/runtime-benchmarks",
 	"snowbridge-pallet-system/runtime-benchmarks",
-	"snowbridge-runtime-test-common/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
 	"xcm-builder/runtime-benchmarks",
 	"xcm-executor/runtime-benchmarks",
