--- a/cumulus/parachains/runtimes/bridge-hubs/bridge-hub-westend/Cargo.toml
+++ b/cumulus/parachains/runtimes/bridge-hubs/bridge-hub-westend/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bridge-hub-westend-runtime"
-version = "0.20.0"
+version = "0.20.1"
 authors.workspace = true
 edition.workspace = true
 description = "Westend's BridgeHub parachain runtime"
@@ -112,7 +112,7 @@ xcm-runtime-apis.workspace = true
 [dev-dependencies]
 bridge-hub-test-utils = { default-features = true, workspace = true }
 bridge-runtime-common = { features = ["integrity-test"], default-features = true, workspace = true }
-pallet-bridge-relayers = { features = ["integrity-test"], workspace = true, default-features = false }
+pallet-bridge-relayers = { features = ["integrity-test"], default-features = false, workspace = true }
 parachains-runtimes-test-utils = { default-features = true, workspace = true }
 snowbridge-runtime-test-common = { default-features = true, workspace = true }
 
