--- a/.github/workflows/zombienet-reusable-preflight.yml
+++ b/.github/workflows/zombienet-reusable-preflight.yml
@@ -236,10 +236,17 @@ jobs:
             cat .github/zombienet-env | grep -Ev '^\s*#|^\s*$'
             . .github/zombienet-env
 
+            # Determine if we should use persistent runners (for merge queues)
+            RUNNER_SUFFIX=""
+            if [[ $GITHUB_REF_NAME == *"gh-readonly-queue"* ]]; then
+              RUNNER_SUFFIX="_PERSISTENT"
+            fi
+
+            # Set zombienet v1 configuration
             if [[ "$ZOMBIENET_PROVIDER" == "native" ]]; then
               echo "ZOMBIENET_IMAGE=${ZOMBIENET_IMAGE_FOR_NATIVE}"
-              echo "ZOMBIENET_DEFAULT_RUNNER=${ZOMBIENET_DEFAULT_RUNNER_FOR_NATIVE}"
-              echo "ZOMBIENET_LARGE_RUNNER=${ZOMBIENET_LARGE_RUNNER_FOR_NATIVE}"
+              echo "ZOMBIENET_DEFAULT_RUNNER=${!ZOMBIENET_DEFAULT_RUNNER_FOR_NATIVE${RUNNER_SUFFIX}}"
+              echo "ZOMBIENET_LARGE_RUNNER=${!ZOMBIENET_LARGE_RUNNER_FOR_NATIVE${RUNNER_SUFFIX}}"
             else
               echo "ZOMBIENET_IMAGE=${ZOMBIENET_IMAGE_FOR_K8S}"
               # runner size for k8s is not relevant, it "only" spawns pods and runs the test
@@ -249,8 +256,8 @@ jobs:
 
             if [[ "$ZOMBIE_PROVIDER" == "native" ]]; then
               echo "ZOMBIENET_SDK_IMAGE=${ZOMBIENET_SDK_IMAGE_FOR_NATIVE}"
-              echo "ZOMBIENET_SDK_DEFAULT_RUNNER=${ZOMBIENET_SDK_DEFAULT_RUNNER_FOR_NATIVE}"
-              echo "ZOMBIENET_SDK_LARGE_RUNNER=${ZOMBIENET_SDK_LARGE_RUNNER_FOR_NATIVE}"
+              echo "ZOMBIENET_SDK_DEFAULT_RUNNER=${!ZOMBIENET_SDK_DEFAULT_RUNNER_FOR_NATIVE${RUNNER_SUFFIX}}"
+              echo "ZOMBIENET_SDK_LARGE_RUNNER=${!ZOMBIENET_SDK_LARGE_RUNNER_FOR_NATIVE${RUNNER_SUFFIX}}"
             else
               echo "ZOMBIENET_SDK_IMAGE=${ZOMBIENET_SDK_IMAGE_FOR_K8S}"
               # runner size for k8s is not relevant, it "only" spawns pods and runs the test
