--- a/.github/zombienet-tests/zombienet_polkadot_tests.yml
+++ b/.github/zombienet-tests/zombienet_polkadot_tests.yml
@@ -78,7 +78,7 @@
   additional-setup: |
     cp --remove-destination ./polkadot/zombienet_tests/assign-core.js ./polkadot/zombienet_tests/functional
 
-- job-name: "zombienet-polkadot-functional-0020-asset-hub-westend-elastic-scaling
+- job-name: "zombienet-polkadot-functional-0020-asset-hub-westend-elastic-scaling"
   test-definition: "0020-asset-hub-westend-elastic-scaling.zndsl"
   local-dir: "./polkadot/zombienet_tests/functional"
   runner-type: "large"
