--- a/polkadot/node/service/Cargo.toml
+++ b/polkadot/node/service/Cargo.toml
@@ -127,12 +127,12 @@ polkadot-node-core-chain-api = { optional = true, workspace = true, default-feat
 polkadot-node-core-chain-selection = { optional = true, workspace = true, default-features = true }
 polkadot-node-core-dispute-coordinator = { optional = true, workspace = true, default-features = true }
 polkadot-node-core-prospective-parachains = { optional = true, workspace = true, default-features = true }
+polkadot-node-core-consensus-statistics-collector = { optional = true, workspace = true, default-features = true }
 polkadot-node-core-provisioner = { optional = true, workspace = true, default-features = true }
 polkadot-node-core-pvf = { optional = true, workspace = true, default-features = true }
 polkadot-node-core-pvf-checker = { optional = true, workspace = true, default-features = true }
 polkadot-node-core-runtime-api = { optional = true, workspace = true, default-features = true }
 polkadot-statement-distribution = { optional = true, workspace = true, default-features = true }
-polkadot-node-core-consensus-statistics-collector = { optional = true, workspace = true, default-features = true }
 
 xcm = { workspace = true, default-features = true }
 xcm-runtime-apis = { workspace = true, default-features = true }
@@ -170,6 +170,7 @@ full-node = [
 	"polkadot-node-core-chain-selection",
 	"polkadot-node-core-dispute-coordinator",
 	"polkadot-node-core-prospective-parachains",
+	"polkadot-node-core-consensus-statistics-collector",
 	"polkadot-node-core-provisioner",
 	"polkadot-node-core-pvf",
 	"polkadot-node-core-pvf-checker",
